Use base64 image for fefu logo

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -98,6 +98,7 @@
 \RequirePackage{array}
 \RequirePackage{xstring}
 \RequirePackage{xparse}
+\RequirePackage{ifplatform}
 %    \end{macrocode}
 % The \textsf{tocloft} package is loaded with \textsf{subfigure} option if necessary.
 %    \begin{macrocode}
@@ -424,7 +425,7 @@
     \begin{titlepage}
         \setstretch{1}
         \begin{center}
-            \includegraphics[scale=0.5]{fefu}\\
+            \fefuimage\\
             {\small
                 МИНИСТЕРСТВО НАУКИ И ВЫСШЕГО
                 ОБРАЗОВАНИЯ РОССИЙСКОЙ ФЕДЕРАЦИИ\\
@@ -763,6 +764,317 @@
 \newcommand{\diaryentry}[4][]{%
     \expandafter\def\csname @FEFUdiaryentry@\the@FEFUdiarycounter\endcsname{#2 & #3 & #4 & #1\\\hline}%
     \stepcounter{@FEFUdiarycounter}%
+}
+%    \end{macrocode}
+% \end{macro}
+% \begin{macro}{\fefuimage}
+% Inserts dvfu image
+%    \begin{macrocode}
+\begin{filecontents*}{\jobname-fefu.64}
+iVBORw0KGgoAAAANSUhEUgAAAEwAAACSCAIAAABgwbsjAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAg
+AElEQVR4nLy8aZNd2XUduNbe59z73ss5E/NYAAigRhSryCqORYqiRFKSZdFSdHTYjlB0f+mIjo7o
+7uiItqPbogi5w7+g/0BbaofbDjssyxI1cBBJkaVSDSzUhAIKMxKJTOQ8vHzDvefs3R/uS1RRFimS
+Lff9kADyXdx39xn2XnvttQ/dHT/B1dxGEoA76O7uTiPpNIJ0AwkH6gQGBLVMp4G1O1Rb7qgNleKd
+Hr596Zq3ymcfP3GmhTmgBYhBiEA4HDBAHn41QQD8obdpPjAAH7zzR13hJ7Hwh81tvpMUEgIYXEAD
+Be4AESNAcxhcVR1GIDmcGArWDfc27crCxq0HD+6vbHz5409xQmYFY/I3vyx/2Lqf7fpJjWzmEL43
+ijL6E046mzvMzSnZHaJCZMDM3SmqNdFzVMR7W/jmOwtvrvmW7du4vjVM73z5+Uef3h8LQADLWeR9
+Y0cP/hve5r+Mkf/500d/bWx1cXOoOkYmZ0AFlTEz1MAusEu8sWhfe/nK6wu7q1WU9oSheuXG0r7x
+zsRTRx6bbZfABy38O7x+UiPdnSRgTiMcUHgzm6MFRfHk3sx4MiAbAiEcApvAQoXvvPPgm5fvzm+l
+bmrHztQggyrWOfj6jftn58pHZo91gDYJ94fbjA7+uEn7SUfkp96TDnOAyETzNg/fQkjP7k66wEUS
+sOW4sYmXb6x+5613bm4NtoqZHsYlxmxWFq2chjmUO0NZ3epXhqFboRSCDjzcIH8X109hpLuTABQw
+B5y29xYCgIYgFGAIDICuYWEL7yzt/Ok7N965v9FPUunsbm7H1pgik+651y4l10klVlXKGSGKIwPy
+d2jeT23knj1OKGAGa4wmACcEtWMA9IA723hnYfuVa3deuja/wk5P21K0TQpqx6lmKQiKUgK8HdAh
+Zycnde8L/k7c6V+7fgrv2oRGAZOBKhningPV3ZysHD1iaYg37g2+cenq24sbK33vyrQV41lCcooW
+GsU9eRCKCKipN8b6yGR5dHZqPEIAaUbsA3vgg/H5v7iRDzFDNldlE60NmgGjdDOGiqsr+KO/evvb
+b91aYXtYTm0CWow7BJCo0cFcJxFIDIIsXk8VnEq9x44eP390vAXQICLmRhL+vnn/31fvT+14RN08
+C0JVG1VMsZGx1Md3353/2suXr64NeuXMDlrDVIRWO1FCVDNzkUJCJFWMAkUeC1am7cePjH/u6WNz
+ER0gElWVNASjK+lwmL9v4Qjl/P9hpJlnoWTLUugQWBni6oPB1155+8/fur6M1iDO9tmW1lSQQCrp
+dC9CFEYzh+QCpjmNhXoO/bMHOl/+zFOH2xgHxJANRQw1GhcHkhTi/ej1s18/nZHuLkJzSxJ2gU3H
+t68s/se/vPzmvc1u3LcrLW2NKYNZEvcQVYBgXgSpRIwpRm8hteutw8xPH5r6wrNnH2ljGhAYICao
+MlThoJuJiDQR2O0D/uhnQQs/vXd1d+oQWKnw3auL//obL11dy91ittLxSooitEUk0EVExGnejiF7
+HcgoqeXDsdw9OebPnTj4c08ePzaGGYB5SIkuMIDSeB02No225c9g1s9spLs74dStCv0CL767+v98
+47W3l4c2ebibVIrSwdoYQnBL4ojIRaEmWXJuy7Cw3qz1zs20Pn764KcfO3ggYoqgodCyBhKwXTvJ
+wuoiakFxuLkrf3jF/kw786ebSYNUjrrAi1d3/v2fv3Ztve7HucoiyrbFGGPR3BVCKMvC0kCQaNZC
+NQObQu/xgxO/+JFHnzyk00AHQEahGKYaIfaBO1u9t69c+chTT8+KTAZEkCIKAoaH+eAH06uf2ODw
+o2+10Z/eIEg3IBMD4PpK+tNX3n1raWe3mLVywkMhMZoweVVqDEI3t1TFIEzDcfWD0Y636+dOHX3h
+ieNHO2gb2k1AlKFBENgHtoFLK93/cOnmi4v2yaef+MSZzkFFCxx6KhkE3qQkzgSA7ydBPxxVf6SR
+f9vVPMQJggZsGl6+Nv/m/GpXJoY6ZnEsWSLpQKssvc4Cb5cRaVhY6sjgSMEPH53+1JnDTx0v9wuC
+oXAEg2OYBRU4QNgGXluwb15euFmPLSz3l16+3O0e+fknj8xFTDPAjc3UcTTw+sNZ9d96/UTLtfHo
+cFbEYhffv3xzYbuudBKtiQqiRSlREdUAMDtyRFV6bzLvnt3X+bnHH3nyyPSZKYwBklAICkXKlahm
+hB1gPePSPXzt0t3Xln07HlLk4UZPL88XReuLT85WjhYIN1AykBAIG6UFP/HO/MmMJBw0ogJurezc
+XN6ui8kcOi7R3bUQKlNdB2WnLFpexeHOwY4/e2z/5548dX4uHIxoA8GgAQ4M4KZFDWwCS338xeXN
+77y9eGO7WrVCxybM+hWKG1vdb11679GjHx+fAoUwx/sJtAAGmkMM0B//6iMj//PxGC13gTvEm6XY
+/LoCbtxfWaus0oAiVF7HVulMMGtpbAXKsD8R/fh067OPHfv84xPHSkwAHSA6ADNIz31AVsAacGUJ
+X3vpyg9ur/ZksscWRGh0xCFQxMn57fU3rt967LlTlXlBg4vuWbn3yn8XHI+7E2gGDIARybC4sdMz
+eqtlohqEYkIJYEeD93Y7sP7KA9k/dn7/YwcKjAMlACARmdIHuuRiH+8t9b/31rVXbiyt+Vjdmu3l
+KLEIzMKsGsXFoI7WWrc7BBK92HulvXkTwACT9//5Y430D4zH37TIBRgRVAZkR8qioRNiWQs1hpxz
+OxTBEIZeJK7euNFbvNO13Zm1B/GXPv3Cs/tc0Acy0Afme3hzvnvp5oM3bi0tDzGIB3ekrLWUoERu
+S440mEchqmywUOgAAGX0/SPEAADNIv7xtr1v5I//eAQAHE3qaECMsd1u962WsmOWWiHEjJBSf3Vz
+eel+Wl6Kg2pYDb//lz/YWF5a737hU584rSVWe7i8sP3atftv3F5Z2vVdlj0pkhdedBI0uBcKs6HR
+A5yGdqssahEzBTJgEADCv5aJyQd+/lgjm/t/iHvd+xVFQDhchBlwR1SMdQoiMTolR9MxLfLW5s7q
++s7yCjZW0dsVJeLY6qD/6t31m7/7n7648sIj5z90eX7xysLq0nYeSnsXQNnKQg/0lEJAZIC5a2yW
+YQRRVYXZwenJ1t48ZKDOKHXPQIPLj1p9P9VMfuABCjhRAGeOHhp741pPvTsctLQtvd3thcXde/Po
+dYEMZQX35NDWkOVWKv7g0p2pxd2VflVpJ3NM4phFR1RDFlU6kU2YQ6SKwlIhUljuMB2b6Xz4QycK
+uIJwkz3442aj0XckR5S/3c6AEQ52YLQmMcpWvfnI4Q4BCTACJ/Z3js+N7awNOp0J280LV67n+0uo
+B2CCEEKHYGIqTs+Us5Mca+20xzZqDmIntNpMgYmAulFbwbIFDUVUcaOlICmIlWJtrw628mcunJtr
+YRwUON0EJB2ppioAN2SB/mQU5o+cyYeYmA4hzF3IAByewFNHD95+cGu4s70xv54frGBYSePpSJQt
+jk8WE3NxagpjZY7lQEPtjlKMAsuFxCKUImLMbnUAFQ6rBTnk3JLUrqq56J88d+KZR9rjgHtSBm+G
+243uBGBGlQBUVkWJ8L+FHwkNHfXBPTnirRsCgkbC3QTI5oXogYhH9828MXb/6vzKzsIDZANpRnSm
+ZKJTTE+Vk9MsxuugNT0bgoRAGN1yKkIIAtCzJzhUVZU514HsxLLw3Mn5AOvnTux74dF9B1uYJOhe
+eaaIO5UBoALJTJChVojADZAfn1gHYFTe8B89FgI6oaAB48CH9k0dacc3Vu+j7mFo0LKcO4CpcRnv
+hPGxKoRMuhAaKczOpjwEgCpOJksiokqBiQuFka42LOpqNgyeO3Pwc0+ePDaOKQKWgmjf87BGbTEU
+iKLqaEdVINuAHwTqP9rOABewIYz2KP+9io4jv/+fzAkq0AZO7Y9nDo3n3SU4MT0Zx+d0es4nJnNZ
+pCAZbqRqQxI76YgKp4ZgUBFRRYga4JZc6AFQVJoHB9t49tjc5y6cODuDCSDkHMiUDRo36+qVy++1
+p2bOntq/L4CGDiEIbgb+JIjH/zoXL0CDmAh1OF28mQkzEBIkBjz7zIUzf3lp88bSxJETVk7VsVOH
+mFUgTUFDMykN8+gQgYHKQPeG1LBUO1EICyFT6jAfmWg9f3r/rzw3cwwYB4JbIVQiuwyBHos3Frfe
+/O4bTz/56C998qnz4xAgMogZ9jbXjzWSDYNC3wM3RCZZ5xS0sAwzxEg6zAwiPcdAsNlP08cemRiO
+pc5sHdu1BQiVEIi7OIUSIGzYC3cvBOKmqkIoQEr0HM1KCdGdO9sHpmeeOD4z7miNbvDslt3Asu94
+0Md7Xd5I4/feubeW5FefOfv0oWKWIKRAsxB/CCf8UI7sCM3nDweCI0Y8Rw2DalgWJaTBHHCVvmBh
+iO9evv/N12+8t7iB8dkqdIY1tFWYJSGcML6PSEg22y/A3J1mqlBC3VpER6L3+5tL97cXbi29sja4
+dpJf+ETnsSNSIrqKqAFdYNPwyrWVqyv9VY4XkO9fXxOz1sefemwG+7R5c3/fo3gzrJAPoJzQWPhw
+ye5xAO6WWoVWqZYQ+55B7RN3dvGHr934+qVrt5d3Bzqxm0KmahGzG5RZPe+BEKEFKilweDYX10AG
+OGt6Fk/Rpb+5s724vnl/id3dalh97ztv379271PPP/WFz3z08ZOT7RYSsVDhjcX6e9fmN1LI5UTX
+WeXe92+tT4/fPPyx07NtaBN2XUAHBDS4CH8IxOlXv/rbPgqHlJHnMcDZgCaRCpIoO8D8Ln7/++/8
+2+9durOLupis2B6yhBYQcQGUCAoVqDbsjAqVLqohhKCkZyKVlJLWMqvW1lfv3Nm698C3tm1gCrGM
+jc2dq7fmr9+aN8SJQwd3W3hzGf/qm6+8tdTtydhA2plF0e7U2XY3Vh4/su/gVBEIddsryvjeBnXQ
+wdHypVlyAhAHdWRkDZhbypR+MivHtoCrK8N//61Xv/32rfs+NiwmIWVCcGlpKDOyEwziQgib0Qmg
+EiShIYQQLUlKbZWSqDa3dlZXNu7eQq9CPxVSAFIP+oV6EWHeN+tNjoVTj5176rMv/NWNu4v9sCtt
+YzBGCaUit1nNVg/+0dOHfvNzj84BHavV9WH8cBpIwIgGo8hDxGMCbdLHRglAjYTEMqwDtzf997/7
+g2++cXM5tzExW5s4goaWAQlJVB0OkE5CmuJ/wySSJDPdC7Aliv5wZ3V9Y3GxWl1BNVT3XKUkJqHF
+EJPIMA0QCrSit8aubPPGy9dSZyK35gbJi6gwo7hQK2MOxfzaWi9jWmEQ2SsFG8wogBGisAbsBms4
+qoeXAxAwgOwnDAPmN/Bvvv7yt966u+kz3proD7w1VibXjCwhmmfLpmXL3QmFK31UFBdlFI9ETCnW
+udre3V580F1aQb8HFZhYXRdFQdUqVW6GUKLsoCSnp3VqTmdnc7u1a54qxFYn56GQOad2K3pymO3F
+AkDU9nyMjZLPpogqzewGQOhOOmDmI0jvRHbJAWs1vvHqje+/u7BSd/phMkknBKmTN+W3nDNi0Fjk
+KkkoHFAwOAUQuJIlEIZD9Abbq2vbSw9sq4tUwxxV1Xh0A1KqQGCshRDRaXNuZmz2gLYmByI1HKV6
+bqqGLFuFp1TVg3aB4KAjfADx2F5yMeIuH04bEehCAbx2T2QEmQGH1EQP+MGt3f/04utL/WJYTFVe
+UmMtNLhqSDlJURho2aUozSzGKG5BoDkXQg6HExJ2l9e2lx7srq9jdxcA6goioFGCkQmGINCIdguz
+c63Z2TA5VTMmKUBCavekITjqqJKrHIJGKTzvRuVkqyyAFhDgBtQ5BQ2AR0i2pKIAmuAf3sdyBOgJ
+MOSMMACW+vijv3hluQ472q5DC9SUs0uECjRoCFQ1yxABUJaxoKPqt7JNKENdoaoWbtyuN3arbg/m
+dKcbA93NActDxBKxQFFgfLw1O6OT07ks6lg4C3eBwAVUUJrMA0oRs5zTeLu0Ps6ee8IFGehVwxhj
+oQo4kNyh8v5EOjyMMjI+3JhmQAXsAH91+dZrt+5u2FTd7tQCRYKIFIVBDW7GRiPBoozqXnXLaFpt
+HhyLM8yPnjq0cvded+f2RrcKFUNspWwiwRw51SgKlG1ogfGJ9uxsOT1trbLSMmsTZ43UzORiEAgp
+QNmKrOpARIlM2a1Y3cmruxgfQyuWBWm5ouUQQ0rDEErAGh6Oe0nzw8qYOeCQDKx07aW33uuzU8V2
+ChHZXBEUyTNJd6GoaHRCPbGqxnw4VveOT4cPzZWf/+iHTx9gmc/80YHW17/92jvX5zOQITm7acGx
+cReiMxFn5jpzcyzKmqwQjA3EJQGXRLEmeJMkOBwOOqpiJoAn31jv/tvf/9PN26e/9IlHHz/azsC4
+FFENnkKI5glUUBuiUb/62xfN3T1TAHMjDboLXL6//fVX37s3jINiMpGga2yICIQYRCgCh4vVpecp
+qfbJ4PxM+OVnPvSlD5++cIAHFDMRFx49dvzoMRFu7Ox2h6mSiKKNshUOHy4PHsbUdCrKSoNr0KKA
+aHZQFAKqa3BRKBkRlBqCmKV2qxVF+lvbO2trvc3tO3fnV3e2tDM1O9VpBXhNgUHgbICd0AXOAMLN
+H1JeAZKADNxY2NgYMEmnNpWiMCJ5rQwaS0ByzqpoBw2GMg0Od/jJs6c+ef7g4/twoEDbraQLNBLP
+PXX4yCO/dvaVpT/4zg9efW++NXcwFWWYnLRWO2t0VaqkbLkeMrRanfawSqK2V/tQAQMUDngui4A0
+3N7eHuxsDapsVmxkfuP1W6s7g+6nnvvshcNH2wiI5rVSHqpSOGLQxSGh2bWAODDMeLA+2BoQxTil
+FCgIM2Qt4CoaohaaE4b9wgaHx+IL509+6Znpc5PYBxRAoAlk4FCiEMxM4cJHDq3En1uSV9YqxFbb
+ili5QJVkzk5CW2WmDtIQQTIbEVSkUyEKEUIISZXXw7q/vbu1RmCAqGGs1rFXb2+trf/57vBTv/Kx
+k/sCpjUi1yrilEyACBjJcZgBOgmvnf0avexJyt4wlVMzvTRgUI3t7KQUlpJKbtNZV5uLC6sr9zh/
+9YmxXzj5xJy0IUACkzMRW4blHt66s/nNS7f+6tryro5zcqwia1JCTJYJVVWIZDOoIwSQpKtbgJBU
+EQUDnGaSc29zY3t5EVWGFCzau8agUtPme8N/+YffzPWnf/0z5wQYZxQzwqF0IOTmqc3qgGRkEi6h
+lnrIFMtiUGfGEmS2OoZSXAopdLCVdne2lu9jZQkpvfP2zf/zwe8tfvFj/+AXPnpkXxRol9io8Nbd
+/tdfe/fN2w8Wt3NqT/e104d4iBAaCRExcYMDosElAO6WW0HVPcADBe4hkDkHs80Hy92V+zIcUgPA
+TECY6WDok2vZ/68//M74+PgXLhxptREM4ikgOBDovpddAxACAg8CFW8V0odTMgBRBYS5jpa1qqrV
+pd7yIrY3YQbXaojr86u/9x+++WBl+Yu/8KmDJ/bdXOy+eX3p+5dv3enW20nromMoBtlRBonBcgId
+Dhc2aSdJgRPuBuRMQBUq8JS9Nqa0vb7WW9/MvSqKiGuVMkJGpKckZTHwnKrk2vr977wy0/rEZ584
+cCCIJ1MYIUEaGsYpe+xOAEvFZBEiktuAoQgCgQdlTFn6W92lxWr5AXo9Zmdyc4vFWJV4a3Xwe3/y
+2it3tx9/5pl7a9s3l7a6EnfYSkUZtASjGmHmqYIbhBT1RprEBpaZQooi0oGmWm15vNVCf7C29GBn
+eRXVEFktBCNCECBZNteQXWlSo9iu8hs3Fv/oxddPHvnFzn6JElugAmHEYNHhwiZCCFrEsdnZ8XBz
+LfmQKQgCJSTknZ3N+dtYW0e/L7UVjKQODLURsYNyAjPj99LE0uWlnjEXMwNKLkOGZVOhSBAzc3MN
+TbZnkAA6CApFmow9wzwIW6VKVQ031rrLa92VVfQHoGiIpBhICOE5G4uYzUVEQnuQctTxH1y5/f03
+3zvwwqMHC23oygDLkFFNx72hzVESpw7NHZxsL3Wlbx5J1ilt7u4s3MPqCqo6Qj3DAC0iI70MGGu1
+ZmdkbHw3xhzC0N01IETLNWIBUXM3EjGC5iSEAoEoR5djlLOjUMZctWqg2+0vL+/ce4CURYI3K07E
+ydqcCB7ELCMEQM3oodUbDldq/8aLrz99+sj+U5PucGdo6nLuThqo3vh94MhMcWxu/PJWt9SyyNbf
+2OotPMDyCujIZqDEwiBJRSfGWjNT5cz0EBjGwkJIElyIIHCjRqVkikMghDR1Y6MrSHhDvHuD3QLr
+FtBK1TgN29sLV692N7dQiWghZScDTsvI7g4JFB3VNSyP0K0zM1a5vHJr6c3Lt548/nQrNEWORtoF
+cQg4KgEqMNPChTPHpwq23X1zt7ew4ivrqA1VjaBZpS40TXS4byYcnJOpibrUoTIpTOnWLCgAKdCs
+rryqAKMI4A6REEewixRSKUIGeOFpPG0cLXaePzb22XMHH53RfeiPoV9oMq88kCIGN5ooEOjNMz3T
+kiALclEUtcugltcuvbuybga4IDj1IWI3mMHoQYgJxXPnjv7ZpZv9xZ2VlU1fX0evXwYdUhAUEjE+
+ESamdKzDTqsSZoeUMTO4OzQAQJ0kRHcTEQ3BlamR44iZUSU2HQkBHukFUrDU8d6xcvDJ8yc+8cTp
+gx189pF9r/7g7W+9dOnOSpcBw9ys0LaTKWewhkozoKLwKocodX8o1MTi6p37DzZ3Tx2YEIP+1sWL
+hAhI0pAANM48EowY5vjuG++s3V5Ku8NStbbsQoyNhZnZODMrY2O5bNeqWRSio6o+SQkUAQMhpuoi
+RrpQ6NJkFSSEIajQoue2Dcd9MJV3T4/5bzz/2OefPHpiHHOKUwfbj50+ef7MycC0sbGSqqFDoJpB
+14aqEYoSRE6qyKkyq4NET8Po1ZH9k8+ePxyJ0LSaNAnmQyKagFiepn76/JG3js7M/+A9Q2uQ6zA2
+Hian2GlxbBxlK8fSNJqwoToJkG5Es73h4hJcRjKqJrvAnjpFRKpBf7xdlF6PWW9O62dPHfilj51+
+dA6z0qTCSIbxSRz+8KHHTv/qZ95b+P1vvfTKu/PbtVVFx9DJguxZvHChQzMzaQ6v3Z1xs5cXlje3
+E8qAMComOOCu+j73bJY7Iqcm+Y++9Ok7V++/dHleOhMyPdmancsxoiizaoY4CFeCUBOBMYGAjkqc
+EI5+ijfUj9BJbbKnUjXmNI50eq71yUdOfu6JfaemMEMERyQ8V8FcoOZ6epIHnz169sivfusHl//0
+pTfeW97tOSvrIJSAUNRIQCAGgZk4Qka5uLxZ1bCwV07HHlX5kE1XLaqUOjE8cnzyi7/8C/P9by2Z
+cnK2itFjNEHm+w1Q3hQIxEFtIgQp3sgdP2htY7tDHUpXoLRc5METR0599tm5R9qYAgpAMsisBIPC
+3epBS1pKXjhS7J/78CMnDn/95XdevjK/tNPNKn3LkFZWusHho1wXQbRYXt2oaqCNIO+r8dwdpAA0
+os6wGHpAF+jHsnVgf+jnQREqoWlDPzqQRdTpIF0aES4bNgvOkaJEQEFDrbk7nBGIjpLw3nBt8e52
+f/3VjftH7MLEU4+MzUKIAJSigKQ6qWoooxkEiIr9JT731MFTRw6cffXyN156++r9ZcbxCo4wVmdF
+TRibHgAR2e7upmQOCYL8fg8LtUF2BmTFLvBgiK+9eP3PL915MLQ+JUswDY2fAlRIFwfdRm0qBNRJ
+gbgInY5RhbTRkheiJaTMVqQ83N7YXVsdrj4Ybq2+On9t9dq775w78Ru/8rmPPnlorGy6a6hFNEOj
+ZVEBso8pC4Kz3Pf5J04fO/Dv/uwvXr+5slpZpqgUoDgbgsGze1XXTdVLL/72P2tAq5MN+eDIFWTd
+cL+P//tP3viP33/r6upw2JpyLV2DS0FGQROLFSLGUcUOGsBGla0UuFhT6HJCoJGh5SzqJFvb9drK
+2u1b9YNF7G5DCA/bW8M799ZefOXNhZXNODY1NTvecKuNGII0y1lEm9w+CjqKwwfGPnTq+M7O7qCy
+rUHKDuQs7gACsg93JmL+tc8/v39c9atf/QqpoDY+IQNDly7x7lL+3T9+6c9evro0DHU5NUCEaBal
+FKSSQooroNKEBaiCwtESFReAQmUQVUpwL8yLqratrd37C9uNWqQaShE9ZbhSiiqFXpUvX7v21rtX
+V9YGrfGpyemO6IgkpogSOZugIeNyAUyPl+fPn+kP6o3NncGwymnonj0bc10izXb81z7/3L4x1d/+
+6v+RnSINYvahczPj8lL6l3/y0rffurNlY7WO16axLCsnQoCqw71hFmQPj4liL0yoBgco6o4Qo5oF
+85Z5MRwMVx5s3b6VVldoNVICnRBS4TQDRMy19rCy0b383p0rN+7uDLwzOdcZDxS4NUIiNiIVBWAp
+UFsFTp08pAgP7t/rDXYdTDUDRereoani73322f0d1d+5eJHClFOCZeo2cWW5/t0/fvEvrz9YHoah
+dpIULjSKqUKbViWjqitcSBWSje8JIZCNpNIoVBWx3AF0OKw31rbvLVYPHqDXQ12hrpo8clREGXH8
+YoTG0qQYJl9e27564/b1W3cHtYxPzbXHxYGcXVUE9JyiqFIUCIqjR2ZVypt37lR1thQ852CD4zOt
+L3/uo7MlQk5GhRJJtAvMd/Gvv/XKi+8tPBgW3powqAklaIJDGt0pIO60ERvGPZJIkK1ySCgCSatT
+SY9msr1TbWz31tZ8axvDAcwUgOjDXB0wazJZZgC1mTtUOrXY4uZw4wd355e7L73+7q998TPPXzg8
+HUmgBLJ5qfSqLoo4KdAOvvTJcxu72//mj/8CoexWlXtut9tRIUAweBRN5jW4nvGv/vj737z03qpP
+5GI8aVnXFYSqsYG6TTMT2OQTe9HPQDIjU0PUIqdUaIgirIb1xuZw6UHa3MJuv49s4n0AACAASURB
+VIlObtndQ5BMcX/Y3PuBoikF8AxxRi3Kvg1vLHUfbO68ee32Zz/25G/8yufOH+90gE4sHAjFSAJQ
+G46P4dc//9HFxeVvv3q7TZJpemqyELghgJqAnutaja9fuv2HL15a9qmq7LgUlg0xMIQMQkJT62MD
+3iB0GYlK1F0cjA4EVUkWhzX7vf7aynBjDZs7yAmWG1tEhO6p2YGj/giDN23DAJBzhkShmxkADWWl
+2DLf2q5Wv/vuG7eWv/SZ53/uI08cncFMRAHEXAfllIS+4/wE/uEXP7W+uvvW9fls6eDcdBkRgGCC
+ytBTvHZ99d99/aUtH7dyOksZNGTLIUZzuilClA90bBGNYyVgpGlTqM+mNojDKu90u4sL2NiAZ6TU
+UJ8j5QHgHNUz4b5nIR6KHTXGDLe6alIFBw2hBludyfWq/9bC7uIffOflNy7/0gsf+cyzpw+OYUyi
+uDHnAvQgF05M/b3PfOTB/fmtneHRA7NlgDqCCxJwYx1fe/nd66t1DxMMY16508SRa3MKRIMHiAHu
+NKewoU5AGtSrwKxej8Vid21td30tbW5jewspYU+C0hTYnXRzH/Wxj2qLe0CkWXfIOQEGUuhCWnKD
+m8bdoaMYz2owvHZnfWHtO1cXNn7++cc/crrdzpwJwtpabtMqzz96/I1zh998d/uRg5OxYcyHjo2E
+V9678/qNpa5MWJyshlaUbWdSlWwiUkBiSikIJDI3cJ5OgPDoddvqEoOZlkTvXVu4mja2UCdUXoaY
+3KBqcLemBKFUaSqJjoyHFwnfIz9INEHf3JwQQIJqyEWEm7bGu3WvtmK4nVf/4tKdB8vVL33yubNT
+AShECnppdmIuPv/YyfWl20f3dwLglvWfXLx4d2Pwb7/1g8tL/V2ZGqKtoXR3E3coGKEKJ8WpDvEk
+zhiNOQYvWLdT74BWT+5v//qnH/8HL5yZknrpxpX+9k6hwcyyeZBAqGUDoKIERAi3h7TSiNIeSRm4
+l7DBQaiiSUeb/aoCN4pANEuoEe+vrt2+dy8Uk/v3T5URAcw5t4IERTXYfu7C45NlEQD97y5e/N6b
+N77+6o2lfhzqpMdWI0tpwr2LgtKUjikOhUaF16VAq50ZGR5v22cfO/ybX3zsmRPxdAfPPn7skSNH
+e1ubm+sbuUpBgmpwJxwhFKlOnk1jkXMaBUf6XpbZWLiXtTT5noo3zb8iqiKiIkpRF3XVHIJLWO/2
+by8slOX4vv0zrYggArfJTqtd6rFD+8c1KKn/1W9d/Np3337j5kZVTCVpIwQJEIUEQpUaqOJKFzOF
+0xVJ6/6EV4dievpQ6x///FNf/tihwxGHBYXZlPDM8bknzp9vBV158KAeZjMOKwtFkc0dQYsypYxG
+4rPXRIimPtOo5LwpxmdIhgDiFGcDDanQ6EonfPRWWkuxsTuYv3dvbHzy8P6ZdkRBFuoH9s1F0YIK
+g/7c/3Dx63/55nIXuRgfIrgKxEbqewIUIyENfESgxdSbkfrMZPnC+SO//vHHPnq8s198TnILWVIV
+iSg6O1mePXXm5JFDa6vLa5vbIHOuNSgo7i4a3J0P++wpIEY+ttmtBJAb8YiMBCUBDeQScTbmgWBW
+lbLjEqo63b83v3929uihyYIoKIHiyaKqG/Sp/+bi9159p2dlxYhYOAkaaEoSzNLUqEmgoLS93h/z
+Y/s7v/HpJ7544ciH53SGaOVUCOiuonCISyQnWvjQqbnz50+b++rK8qC/Dc851wzBLIdQ2F4Ctid1
+kz14l0gjnICyoYSUoiYKVQSBokknRIJTcjITVepgMFhZXDx75vzMuBSkOSOkWex69h/+07eu3EpS
+JokoygyISAyRolCBKKhBtCBbVrfr/ifPn/jHX7jw7InW8QITwBgtkKSYg6JkEG+wAkrF9HTnsUfP
+njx+tL+7sbW5BqIRbzrs/fr9Q/qHDfoZkalwCkPjZqDBlQgCJZoqLQMpLgJVd3cK3bc3N21YPfmh
+E62ISBRCmkFcH/ny/3zrzr06xKyxoYDdIRqTW4Y4gzK2IGVd6/ambCzt5+CT588c7mBKIdmVRjCZ
+uwQ43V0IqlOYDCKYbuHsiZmPfvjCWKdYXFzo9XZCCHWqVRp03tRCHO8fK9JQGASCSYAGp4zSAOHe
+WQtKyKipW0G6qji82q36WztT5cS5kzOlQuFiFdT0kS//T/PLS0mixyJDNJbC0JxR0iyUEiiqGpub
+u/cXtu/dXr93+91Lr++f3D83MzveoSWoqlBG+UdOGpitBikUcURYACbG9NmnH3ni8Q/nari2ulJX
+w4dW2UMC7yFhNNIXO0QoCpLaLFtQ2CBnCskAEbMkIWRnSjmI1v1h6vXPnjq3fxqFeyPK1w/91//L
+3fv3c1EmDe4iEgKCZS+CKFKRc9zdrVeXegv382Y3GquUV9a3rt+40x/kyYnZudkWmu4Sy0Hgbo4s
+omZZKUCmk4SAETi0r3zi3GMH52b6ve5ud3dYp2HKEgp3gVEleLZRFVwAuNCDwEGKutApCBzV9FSd
+6oBqNIprhKqn5F4P+rv7ZibOHZmdKBq1oOuF3/wnt+cXsha1KyikKjSSSP22UHvD3QdL/fv3sbsb
+M8QBCRnY3OzevHVn4f7S+MT+ubnJEABKrnMMIqLuGWTKtYjCTajKRqyFyQ5PHDv41ONPlFE2N9e6
+OzuARVGI5DrFWDTedYQFAUpwCoI2YWNkoTQhRxvAD9IlwA2eLVWpGo5FPn3m5HRbAoWEvvDff+X6
+jRuJpbOwUFApngNTB0ibm92lB/XKKvpdsaYzgznXqhEMvX66e3/5yo27m7tpcvbw1KQWUSxRhI0k
+WyRII1AhmliQk8PZKTE9Hh4/+8jTj57Ng+7q4mI1HLqbxpAtU9SyAwFQsnAEk4gQfeRaObLQVV0U
+Qjat5OJmSkOubThI3a0nTx85cWgyKpSif/9//RfX3rs5tMJZGEXIwnKRK25v79y/nx6soapbKsHN
+s1MIMmevs2vZrj0sLq9fvX7r+s277bHZ8cnpTodAk1CTFDMn3N2tKSEKgiAKC2K6gwNzY889+9Tp
+k8cHve5ud8tS7ZYbLysSR2cNhOgqaNT6OmKSACVF2Qy7O52q7llgYlkd9e7OsdmJp84dH48goP/t
+V3/n+vX5tW6uWTqlIFr1UHa2t+7cwuZ2GOSWe7Dslpwiqu6UEBjKZF5l16IzqGx+afnVS5fWtnrT
++462OkWMIFgnD6LSBBhkczOvzZKAdPfkpcpUB6dOzn30wtNHDswMdtYHO1uWMlxExeEmgiJAGza3
+WZuNdkkwih8MKk6IinmC5VzXSrXhoLDqo09fmBmHAPo//ouL8/c2by6tJ8QiFjGZr60P7i1ic6MY
+Vi1rlHzZ4SBNmpMNNJuZOQgJIYEMYXeQ3rl6bX5h0ViMT+4rW1JEojkrRGQUBEQEIiIUFxG32jPK
+IONjPH/60JPnzpXqO93tqqpS1dcgTlpDYBUCOgQiKhSIuoiHpuQHJ6gCmFlCTmCg1ejvPP3Y6dOH
+xiKg//SfX+z2/crdxcqkJYVt7NR3l/Li6qQjpMSG0xFSJJMZABsu1CQgBCWZUuUx1o4scWl5/cqN
+mwuLDyS2Z+dmYgFKcyATmsT0oQI+WU2lqFr2KGwHzI61nnvm7CMnj8WQtjfXujvbIENRIIghSyMm
+JCSELOKhgXgNk8/RMQxuAN2o5hx2zxzd/+FHD5WA/rOLFyGty7fnu72B9+rewrLdX+vUplW/oEjQ
+7J4tQ2giBhPRlCsRClFVQ4pCgxlcCoNk9253cG9h8b3rt+8vb+07dHxiIjTMPbjXAAk6TUUyPZsF
+DaR7Su3AIvDAwalz506dPX0yiG+srfYHuxQjs2jTcBJdgjUUfgOaNIB7CgRi1ItntabesX3jn372
+TIvQr1686KJb/cHCnfnB6vbmzftFN4+5qJrBawIiLpJBECpqSBRzIgNUMdJBUmAOd1XNxjr58vrO
+lduLb1y+kS0eOHyo1R4tOs8Wmpo61CFCdSBbbqK7u5WK8U44c2L22QtPHNq/b7i72dvdqtPQnFq2
+LcScnUULaBycAgESKd70INEcKamb5sF0yV/8+IWJCP3fvvLVsZKhNX7v5p3bb703XOtOss1kEtwF
+FtRERm0sgHu2PWDlhFFGNAWEAhrgNHMNLcTW5m5aWd958613bt1erK2Ymt5XlhDh6LSF7CNo1vTe
+jGT6JnBhEtPJDh/90IFnnn7mwL7pXPdTTr3BQLTQ2MrJ4BZiNG8Ec9RACr2uG2V0IfBBr8y9L37q
+udm26D//na8GcLyM20trV16/3N/YVYshBpM6i2VKJkeiG8BBE8kiDnWKNxgSogRyVtEoaoYEMRbO
+0rXoDqub8/du3Lm/srYVi7HpmYmgI0gelJY9pxyDCpCtImEZUcoohLuCcxM8dfLQ4+c+NNFpVYP+
+7s6OpRRChKiTokFjNBpJyxkpqQS4e1VFr72/8csvfPTQdKkXL35lOBhOlnGyNbE4v3jn5rxqqzJz
+zRA41QADR8dzEamp8FBsr29NnAKQYqkG6BRQnYUzQIPGkJw73erq9dvXrt3Z7VvRnuqMlyEyGVSo
+Qcyyu0XRpqjiBncLIpEQeCdwaqJ84tyxM8cfGWsVm2urw2GfRBN761SBEOWoXGqOOiHX0VPM/c9/
+/MkTByf0K7/9v0fRQJ0eb09P7X/1tddXNjZjqwCce6mWkQY4LFOSiu11yYwqxxjlA9kcFAkBLubm
+7m5V8gTVOsswy/p29daVOzfuLg2snJjeF1tQRXJrXsAS4c2Zbnz/6Dp4JEuirTgw23rszLEjB2dz
+rrY3N3POsShiFBGHZcKVwevsdRVFvRq2mJ5//ORjp/br7/zOV0XUU4bL4cNTdSWX37tRVfWeJD84
+NYs4YPRMmjYu2xqf3WT1o3ENqkHdPVkCPATRICHGVJsxBG0Pjb2hrWzsvHLpzavXb5fjMwcOT6uy
+afxrEqmcIIomayZAd5rD6lI1CsqII0emn3ri7PTUZG97c319OXuGEM3RRA46PWdxs7puS37i5L6P
+PH5cf+viV6qqjrEEYcCpM2eyhVvXb1s2uLgFEzVFoieFhyYp+qGGhMabO8wF2bOP9IcE6lTVOWeR
+QEp2z2AWHVoeGucXV1/8q9dv3lltd/aNjY1rgCpSapqgRg+WEXcnQoHTskVlIWi3cP707GPnTlXD
+7srmTg0RiRBNlcGgRstJYNGrJ07t/8TTj+hvX/xKUCEJJwUx4NixU+ubG/cXFrMzIxjFGDJgGFX4
+CNvj1UbekXssG605eAFmRoEGaegpiri7hCgqOSMz1Jn9ym/dXnj73fc2tnfL1lQx1mm1YQYRZPfs
+WWAjz2ukQoQj6RpYAAcn4rmzZ2JR7mx3t7e2PIs56VR3pGRu0QYXTh/4+DOn9CsXf0shnpMANAtB
+WiWPHz+xsbNzd3G5W+ckIbuGUKbq/23u2nrruo7zNzNr7X0O7zddSEmkRMokQ10sO7HjNK3ttkmD
+oA3aAA0K9KV96EOBok99TSIG/Rv5DUGAokDQFkVaBHXhNk2Npm7syLGtSLJ4v/Ocs/daM31Yax9S
+SoJYARxrQBDkPkc6nL1uM9988+2qKIoQM/SmUVmkoaxRQhUZQsQKNmYjiRnB0UxtSfw6YhizeCNH
+UmztHb717t0337m7dRgGR2dGR1kNRuSYDRFmTBQ1ps4JIxBMQAVQAAMOz8yemRhsx27c2NqpWYIa
+eh0vqELwqD8xO/bKJ6/KV29/lQCGpBzJzIqSB4bK2fmra1tb9+4/jGZEbEaF8zFGI2iqrnlHJFHN
+iA1NszDZSXcCSUbfTlptG8zKhJhDHRSiLFXQ9a29d96//6M770bzY5NnBgaoVngWGEKI3nvrN4Ba
+FBhDRa0t7KCXL46dmZo5Oux+sLFRV7Un1br2vqD68NrFsc+9uCTfWF0FSBXMAlAICmYWDA76Gzdv
+7uxuvfvuO5rUBlgUyg7RAkBmiMbkHIsk7leiWWawkZqWKEp7cMPhSdgxmcbITtiJqYKFyB0edtc3
+d//rjTfvfbAprfHxyWFxIOJCpCmVREJIebBaJLAxOyYCxkfd3Oylvf29u3ffEyJVi1FdfXTz4sjv
+vrQiX7/9NSLRlEoysWRxz8LT4CCWFpda7fKn9+8fHh8QizEHixAqfGHEphmBAhEogowS3JaGLlEI
+TLKT/Y7b/CKbmlqeFjBWCLniqBPeunP39e//4MGDnZHhyZHRIZL8j9RMmAELIYiIsFONiVHgCUNt
+LC3Mba1vr62t19HU4LV769LYqy9ek9ur36Cce6IJscwxhMyBRkdk4erC8PDw2sbazu5OgEZxtSFG
+M0UiK5jGwpGaEjSVgZBb9jlT0fJUtdNTGsQpFCAIwJrQXpMINvZHXXr7nftv/PCtrb2qPTTaGmiz
+hxlRQkrZaYgKZTYQOcAjDhC3PeYuXNnc2b334KGKuHh8c/7Myy+syOrqKgAlS/c5qqpGIUPTDuMc
+X7w0M3NhptPtrG1u9AxgKXzBRARywjFGS4oMSaWXMkbDYIPlYz3R69AQ+gELEcIAI9WCnCN2IUZw
+KiiWwdzeUe/O3XvvP3hw0OkNjkyU7cIJ6ghJ1G6NxGww1VCQIYa2uME2t0cmH3ywdm99Ddp9aeXy
+S7cW5fbt29qU4oDUyUpEQDQQa6yJuD3As7Pjc3NXFPH9e/ePjrvp+K3rABBLYv9k3nNzyKUbn/H4
+htem/RZc3yo0BqhCGEymtUHZiQYtfBlBVYT61lHQe+u7d+6v3bl739zg2NS4LxEijMBMiX3lSNjA
+JGIMw/hYO6K48/7dXufgxRvzn76+IKurq0xGsIioGoiQkw4ShMhOhMlAjmh0tHVtZXl0dGx3e3Nv
+ayMp9RIzkcQshMgEagBwslylajx8pAUeMcSmUAeYZpQxqmOp6prEkbgIorIVxR906/Xdwx/88P8e
+rB0Oj54fmShS51q6j5luYgSod8weY+NTD9Y31u+/d+PqhU/fWJLVr99Og0AgJsGpFiek/4lSdsVe
+MNzC0vzM8sIVC73NzfUqBMAZe3KO4NJQCjWqBQRiPtHVOzFD6iBPNb1UFyDL1JKUFWq0VGwgVpEo
+/jhyF/69e+tvvvNut3LDo2cG2ikUIiiEfMIoqxgdc1liaGD0jf987YXrV68tXpXV27dTM3ITFzNO
+dotG2gJGZmLMQMvhwvnhWzdvXpg+v7W5ubu7S8ydTseJpN3PAK0jhNmJxZgYiZSbp05YHv1CT/a6
+IZOgQc/RlLTMkbKoFCjacO217YMfvX3n/sONYmB0fGrICTnixGFSq0S4DloKj4wM7W+sTU8Mrzyz
+IKurX0u7agMn5KQ4lWKTh0AibLEYYMELD5SYnz27srjo2LY310hjVVWUQG5iFSZhY4MQKcMkVR3T
+3kuZsNj3ltIpCpX+ms7HTLo5OS2XCO5G9uVATfL+Bxs/Xd88CjQ1dXa4BclItAHmSJiodPAU2ar5
+2Yuyunq7mUQ5T28+IktHU1YQkRRTsVNCFJATOjPevr60dOn8uapzdLC3E2NdVz0wmKGhQkbQuT9g
+qR2RgERMJ4Igy/6hqd30xzf1USQFETADDOd9WZq4CFJX7Ffxx+/d7fR641Pnh9qCXOozIUeqpHFs
+ZKBwmJqY7Dt5osLUfIpSP/JuPAQhcYSF4Ik8MDaIy5emnl1ZOndurHe8t7W1FkOHyLxj78WiptMy
+h/9pSaQfkiNZ5yq9J93lVMaLaLBG4gJwvmirmpKBrSbUJBW1a7h76w8frq1PTl2YmvAOVNexFIGZ
+Y7TLotVueVf0naS8NrKrfQWPVHXI+2W64zF1JxMYGkMsvYyN+k8sXbixcm14qNzb3ag6x9CoQZnZ
+wEgdzalcBT61E/XJzBluy4yvRNPK6Y0De8BFgxSFCYzYD7TJFbVJAAfYB+tbGxvbk5PTY6PFsJdQ
+q0uleo1lUZiCzOqU4j+y+SWFUWsuUuJLJUVODyBGA5C6LQyxjiEyK/kaePMnO9/6zvf+9d//997G
+8f5x5NZAbaRGkRzBWerYbBIygqYSZSonZFpPqugxGRNLaeKNCypLI6O2kHcaahTeFYWG4BhD3tph
+/5kp/zd/+vvPXRmdZIjBZ3EvBiFHPKfKg3nQTjw82SU0vULElDW/EGMgBrN5AiMwZHK8fX156crc
+XEkWquPDoz1KiT4hMw9O9B/7R0j/fDWoUm6OI0CIJUEwEIHLvHDyQkwGsHeBfABHos5xZ/3hg/nZ
+y8PD3hPYiJkQDEyyuvqNn/EQeYqe2uYpb7+cS9+maZfK6TY4mjEVABXAcIn5i6O3lhauXDoDs/39
+3e7RfpIj0kYLqdFTNuY8tIbEvANTEzowLBVThNPGT0yJMUxMYFMiiFMmFqeK7a29/cPDhctXRgfg
+CJJOYLb+SH4Y6x90irwnpmBViJjJpQQ6xXgFYXxQzp2dvH79+tUrcy1HB/tboe6SKhMAihqKogBR
+DJFYisLDTOuaJfeogADX903ABE6nAyeBkUSyhS8TbYDBvV69v72H2J2/fHGgQGKKR62eyMk8x07w
+juw7AdC0YRhlPMqMiUpPI0M0Oz3+wnPXlubnDvd2NtceEKEOlXhf9SpjL85rVce6Zkngv4Abglaq
+RmadJsckLJ4TeQrGiccVYipSOiJS6x13OnvbF86dmT43UiZuvOEJnGwk5k9+Pu1kWqmnRPYplUdL
+otKh5bB4efzVl59fXFh0pJ3jw6rbYUemwUxJmHIISZaDUQMSg0dAeWUSCyUGT2ZIgImo8AA5dqYG
+hcD2tncO93eX5xcmRxwpCn4SJ/senfLw1AFjxkRCBCglxm9uTqg8WUFqAYMFzc+OrSyvXDo37hCr
+4/2qc+QdotbRIotT07QMcssheSYmCAsbk3mYS/RaAhOzsAiDYh1AFDRtlqxRjw4Oxkday89Mtxge
+T+7kqWQCp/Kqk9+YmECqqqoEZYapMsELO5DWOj5EC1fO3FhZWZidZtS72xtV5zihCsScAKIs7UNM
+JMwEYROCEIQhTd8sOwKTEDvH4lVBLFUVzBCqXt3Zf+7ajXODRB9+up4avUe3XZxse6ZJuwQECCeO
+DJsxMashhCDCnq1gbjEmh2h2euL68tWFyzPOUedwr9s9iiEQJUE0IwOzgGGcIuHkIafUxJiM2Sid
+YQISDUrCFiMIsa56h7vTU6PLC2dKol9huj6y6/R/TcAk54w7r0tVZWazdJ3NNPUZkUVHWgqNDhVX
+Lp29ee36pQtnQ+94Z3NNQ2AySSLLmekulo8QbjYnBhgsBnLeBQXBGQmgCD0Dcay1d+yt+sxz10YK
+0BM9Vyu5hccP1tP2mHouAzA9BbmTUUKDTMF83Iu+bFVAD9g5wmvf/8nf/dP3Xv+ft3f3Q/QDXWpR
+MRDImTguBUzkBOKUHFxJ3muTczIXGiJTT+sOapXqqKwOJmj/m3/71y/Mj37YkTwZvV/i5GO37GTR
+KuUoA3nklZkLxwy2CGcYLTF3YfzG9RsXz0852OHBXtXrGQzEvpSmtMTivKROcCDJyICJ4M0CIyBW
+rAoNrOZCNTM++OzypSeYrtRMzV/sIR7LjPshP1FTQWlyOcu9hwzAMRUMjmg5TA7R/Nz5G0vLM2cn
+qm7nYG9HY03MEYAX12orS4jRCN57hYFz3mmqDrXFikwpRlJwDAPU++ynnn3yJ6Q9oVmfPNc0T+bs
+2TilVTGaS3zTWDOEIiZKHpktZ8/duvWJxX/43n989/s//PHDXVipkF7dUS6lKMFUhw47Z5C+Mnpy
+2RJtjZySX9s5erBx9CscIR/G6LGvBg3QpiKW2paQId801CIEckxiEEUpODvhb6xcnr98ETFsbW/3
+uhWx80VZhcoQfUGqAeLQ8A0E0eoMAJuBQt1CuDZ/6SMfyWZuM5HaqRYQJooxqplzqa/aCFTHyBDn
+IKRMKgRpuc/emHlm4Q9feuP+t//5tR/8+EHPmERqhhMHZjVVKAkhKswpAoEMqgZlOTg6/mB99yMa
+ydPWV8aj1BbbMOojkzKnqD7UpiAhYRJEDUbKLKlCWBINFFiYHVmcXyxFtzfX6hAU1AtmVDAlSSFK
+Ag0aDJYLsi6GQnvz5yc+8pH8WcsIhxoxwVRjZHGOOFhEwmmECVRb8CQEaKza4h3ouUvuzB999ur8
+9Hdef/O/33240bOIUk2IHE6mTMZ7mSiEYCybO/u/BicfQY9OXGWXUzaWxEb3+XBKq5c8eQIYykKK
+qg0E8OVhP/TC/PS5qb//t//6lzfeXuvuV8VUTVSHUDofa4VGFtJQk0YR6dXYO+5+DCN5yvqI1on/
+ZkkyMZG0gazbEw3KZh7xbNF68erI5MSr02cnv/Xd1+8f7/d6fnhwtI5KpmW77HWO0EQvATjqVR+v
+k7/QEjqbcDuYIzAlPMBIFYVhaQKTn7tx5cL0N7/9j/f2dLt74PxQJE2cZ0pBIZNBj7tH/Es/76M2
+e9Qyeb6xDPyyRGXAmVHBGBEMAzMOLy9P/dVXvvDsxZGzLUV3z5NVh/sgcu5k8KoqfPxOPmb6WDjd
+dBiYSiowIcIZfIitqjvj8VvLE3/+pZefvzI+PaA+dArv2RBMkc5KI1X9+J2kU5auGKWevAiLSPqd
+ADuEgBhhZrDIYoVDgXog6vNXRv7sS6+8tDg9FI/bqNmCxQDkR2So0VO2JpunzCSSLBr57dRIpYIM
+gkWQRRYxs0FhA5691Cr/4Df3d45fe+t+9MPHwSgrzPNTMZI/z/Rn0j81xASjapJeS6puCrPYBkaA
+6zPFX/zx55+dm3C9/YKi5KmhT52T+WB85EKewwxjaIJkI6CQAEdSCIlAS2AQuDlX/uWf/N7z82cG
+0UGoRESEVZ++jafvVla0OvXVpKWPmEIFzLAWMOlwa370y7/9qcsTrSGJsTqOWov7EML+v27L3Ins
+2ImfxkBKq1SgAnX5u0WNZqSAMztf4HduzX3+k4uTbWs7JdPC+afMyXxgUyUNwgAAAQNJREFUcL/2
+khWj+9dzvqYEhRmZcWZDAWocKladGcKXXnn+1tXzLT3yWiEp0D9dZnyqgvhzrfmbk8yQapJXBtS5
+omQuyZYvtL/yhd9Ynh5padXCU+jko/hKGjugj6hwTreRWyhMyWAaK0nILVRgBfCZ6+e/8sVXh6Vq
+iT1lTjbuGaBQThPWTl4yQMHx1FplJ4mUIARFjKZJ16wNfP6lmy+sXB4pnzYnkxH6Tz8joKE7PWLa
+vDPFgMximvqwmcwEGHCYGsaXv/jK2eHiKYt40Acxf97dT+yUx96Z6qXERIkzZJJIIIYBh+uLF7r7
+Nz4suPwU28kgJ1+MWIEAMqAbdWtr6/8B1bQ2upA1Je4AAAAASUVORK5CYII=
+\end{filecontents*}
+\newcommand{\fefuimage}{%
+    \IfFileExists{\jobname-fefu.png}{}{%
+        \ifwindows%
+            \immediate\write18{certutil -decode \jobname-fefu.64 \jobname-fefu.png}%
+        \else%
+            \immediate\write18{base64 -d \jobname-fefu.64 > \jobname-fefu.png}%
+        \fi%
+    }%
+    \includegraphics[scale=0.5]{\jobname-fefu.png}%
 }
 %    \end{macrocode}
 % \end{macro}
