Underline filled in fields in practice task

--- a/example/subfiles/practice-task.tex
+++ b/example/subfiles/practice-task.tex
@@ -1,6 +1,6 @@
 \documentclass[../document.tex]{subfiles}
 
 \begin{document}
-    \setpracticetask{}
-    \makepracticetask% The document must end with this
+    \setpracticetask{разработать шаблон оформления отчёта по практике с использованием набора макрорасширений \LaTeX\ системы компьютерной вёрстки \TeX. Разработанный шаблон должен соответствовать\\ правилам оформления ДВФУ и обобщать как можно большее количество\\ необходимых документов, иметь пример готового отчёта.}
+    \makepracticetask[Дальневосточный федеральный университет]% The document must end with this
 \end{document}
