Fix bibliography on Windows

--- a/example/document.tex
+++ b/example/document.tex
@@ -18,6 +18,8 @@
 \setdirector{Мирин Илья Геннадьевич}{}
 \setsecretary{Сапрыкина Елена Валерьевна}{}
 
+%\newfontfamily\cyrillicfont[Ligatures=TeX]{Times New Roman}
+
 \newif\ifpractice
 \practicetrue
 
@@ -35,7 +37,7 @@
         \subfile{subfiles/conclusion.tex}
         \newpage
         \bibliographystyle{ugost2008ls}
-        \bibliography{references.bib}
+        \bibliography{references}
         \subfile{subfiles/diary.tex}
         \subfile{subfiles/practice-task.tex}
     \else
