--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -409,12 +409,12 @@
 %    \begin{macrocode}
 \newcommand{\@FEFUcredentials}[4][\textwidth]{%
     \setlength{\@FEFUlength}{#1-\widthof{#2 }}%
-    \settowidth{\@FEFUcredentialslength}{#3 #4 \hspace{\@FEFUsignwidth}}%
+    \settowidth{\@FEFUcredentialslength}{#3, #4 \hspace{\@FEFUsignwidth}}%
     \ifthenelse{\lengthtest{\@FEFUlength<\@FEFUcredentialslength}}{%
         #2\\
-        \@FEFUlabeled{\uline{\hbox to #1{#3 #4\hfill}}}{ФИО, должность, подпись}%
+        \@FEFUlabeled{\uline{\hbox to #1{#3, #4\hfill}}}{ФИО, должность, подпись}%
     }{%
-        #2 \@FEFUlabeled{\uline{\hbox to \@FEFUlength{#3 #4\hfill}}}{ФИО, должность, подпись}%
+        #2 \@FEFUlabeled{\uline{\hbox to \@FEFUlength{#3, #4\hfill}}}{ФИО, должность, подпись}%
     }%
 }
 %    \end{macrocode}
@@ -761,9 +761,12 @@
         \end{longtable}
         \stepcounter{@FEFUdiarycounter}%
         \renewcommand{\arraystretch}{1}%
-    \end{center}%    
+    \end{center}%
+    \if@FEFUoffsite%
+        \noindent\@FEFUcredentials{Руководитель практики от предприятия}{\@FEFUifempty{\@FEFUoffsitesupervisor}{}{\@FEFUshortname{\@FEFUoffsitesupervisor}}}{\@FEFUoffsitesupervisortitle}%
+        \vskip 14pt%
+    \fi        
     \noindent\@FEFUcredentials{Руководитель практики от университета}{\@FEFUifempty{\@FEFUsupervisor}{}{\@FEFUshortname{\@FEFUsupervisor}}}{\@FEFUsupervisortitle}
-    \if@FEFUoffsite\vskip 14pt\noindent\@FEFUcredentials{Руководитель практики от предприятия}{\@FEFUifempty{\@FEFUoffsitesupervisor}{}{\@FEFUshortname{\@FEFUoffsitesupervisor}}}{\@FEFUoffsitesupervisortitle}\fi
     \newpage
 }
 %    \end{macrocode}
