Preserve page number in titles

--- a/example/document.tex
+++ b/example/document.tex
@@ -25,7 +25,7 @@
 
 \begin{document}
     \ifpractice
-        \maketitle[2]{practice}
+        \maketitle{practice}
         \maketableofcontents
         \section*{Введение}
         \subfile{subfiles/introduction.tex}
@@ -41,7 +41,7 @@
         \subfile{subfiles/diary.tex}
         \subfile{subfiles/practice-task.tex}
     \else
-        \maketitle[2]{thesis}
+        \maketitle{thesis}
         \makethesistitlebackside
     \fi
 \end{document}
